# ebookmetafile

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  ebookmetafile_launcher.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: test_delegate_fill.py  test_model.py  test_paste.py  test_recompute.py
src/ebookmetafile/: columns.py  epub_build.py  epub_clean.py  file_apply.py  file_convert.py  file_scan.py  gui_constants.py  gui_dialogs.py  gui_help.py  gui_main_qt.py  gui_table.py  gui_workers.py  metadata_fetch.py  metadata_read.py  models.py  pattern_engine.py  ui_helpers.py
tests/: test_cover_cache_key.py  test_epub_build.py  test_epub_clean.py  test_file_apply.py  test_file_apply_extended.py  test_file_scan.py  test_gui_constants.py  test_gui_table.py  test_integration_fetch_write.py  test_metadata_read.py  test_models.py  test_models_extended.py  test_opf_upsert.py  test_pattern_engine.py  test_ui_helpers.py  test_write_safety.py
